--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,6 +2,7 @@ html,body {
   /*padding: 5px;*/
   height: 100%;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-color: rgb(32, 33, 36);
 }
 
 a {
@@ -14,7 +15,28 @@ a {
 #card{
   width: 275px;
   overflow: hidden;
+  color: white;
+  background-color: #292a2d;
   text-overflow: ellipsis;
+}
+.card-bottom-area{
+  display: flex;
+
+  justify-content: space-evenly;
+  width: 100%;
+  padding-top: 5px;
+  align-items: center;
+}
+#toast-container {
+  top: auto !important;
+  bottom: 50%;
+
+}
+.menu-color{
+  background-color: #292a2d;
+}
+#loader{
+  display: none;
 }
 @media screen and (min-width: 1000px){
   #menu{
@@ -22,6 +44,20 @@ a {
     padding-right: 20px;
   }
 }
+.input-color{
+  color: white;
+}
+.form{
+  color: white  ;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  background-color: #292a2d;
+  align-items: center;
+  justify-content: center;
+  border-radius: 15px;
+}
+
 #author{
   align-self: flex-end;
 }
@@ -56,6 +92,15 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.videoContainer{
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+.video{
+  width: 50%;
+  height: 50%;
 }
 .addComment{
   display: flex;
