--- a/views/login.pug
+++ b/views/login.pug
@@ -1,17 +1,35 @@
 extends base
 block login
     .forms
-        form(class='forms',action='/auth/login',method='POST')
-            .column
+        form(class='form',onsubmit="return handle_login(event)",id="form")
+            h5#title Login
+            .column#column
                 .input-field.col.s6
-                    i.material-icons.prefix account_circle
-                    input#icon_prefix.validate(type='email',name='email')
-                    label(for='icon_prefix') Email
+                    i.material-icons.prefix email
+                    input.input-color#email.validate(type='email',name='email')
+                    label(for='email') Email
+                    span(class="helper-text")
                 .input-field.col.s6
                     i.material-icons.prefix lock
-                    input#icon_telephone.validate(type='password',name='password')
-                    label(for='icon_telephone') Password
-            button.btn.waves-effect.waves-light(type='submit' name='action')
-                | Login
-                i.material-icons.right send
+                    input.input-color#password.validate(type='password',name='password')
+                    label(for='password') Password
+                    span(class="helper-text" data-error="Email or Password is not correct")
 
+            button.btn.waves-effect.waves-light(type='submit' name='action',id="btn-name") Login
+                i.material-icons.right send
+            #loader
+                div(class="preloader-wrapper small active")
+                    div(class="spinner-layer spinner-blue-only")
+                        div(class="circle-clipper left")
+                            div(class="circle")
+                        div(class="gap-patch")
+                            div(class="circle")
+                        div(class="circle-clipper right")
+                            div(class="circle")
+            .card-bottom-area
+                a(href=`/auth/forgetPassword` style="color:wheat;")
+                    p Forget Password
+                a(href=`javascript:void(0)` id="title-bottom-a" onclick="signup()" style="color:wheat;")
+                    p#title-bottom Sign Up
+
+    script(src='/javascripts/login-signup.js')
